# henoc

./: .gitignore  .gitmodules  .qmake.stash  LICENSE  Makefile.am  README.md  autoclean.sh  autogen.sh  autohenoc.sh  configure.ac  configure.sh  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: export-assets.yml  sonarcloud.yml
.idx/: dev.nix
FullHenoc/: CfrmHenoc.cpp  CfrmHenoc.h  CfrmMundo.cpp  CfrmMundo.h  CfrmPeCaLi.cpp  CfrmPeCaLi.h  HBall.h  HBox.cpp  HLine.cpp  HLine.h  Henoc.pro  diagramscene.cpp  diagramscene.pro  diagramscene.qrc  frmCatapulta.ui  frmHenoc.ui  glwidget.cpp  glwidget.h  henocUniverseI.h
HenocCameraDrv/: GeneraHomografia.cpp  generaHomografia
HenocCameraDrv/HenocMouseDriver/: HMouseDrv  Makefile  drv-v4l2.h  frame.h  v4l2.h  yuv2rgb.h
HenocCameraDrv/HenocMouseDriver/opencv/: Makefile.am  camera-photo.h  cv-v4l2.h  cvutils.c  ui.c  ui.h
HenocCameraDrv/HenocMouseDriver/opencv/.deps/: cvutils.Po  ui.Po
HenocCameraDrv/uvccapture-0.4/: uvccapture.c
HenocUniverse/: aabb.h  enums.h  henocUniverse.h  vector.h
HenocUniverse/ode/: common.h
HenocUniverse/ode/source/: lcp.cpp  matrix.cpp  memory.cpp  ode.cpp  quickstep.cpp  step.cpp  timer.cpp  util.cpp
HenocUniverse/source/: circle-circle.cpp  composite-all.cpp  henocUniverse.cpp  quad-quad.cpp  terrain-all.cpp  vector.cpp
branding/: README.md  export.sh
docs/: ARCHITECTURE.md  CLASS_DIAGRAMS.md  CONTRIBUTING.md  README.md  TODO.md  TROUBLESHOOTING.md  USAGE_AND_EXAMPLES.md  USER_GUIDE.md
examples/: balls01.xki  balls02.xki  balls03.xki  blank.xki  bolasPrec.xki  catapulta.xki  catapulta2.xki  domino2.xki  domino3.xki  dominoPrec.xki  equilibrio.xki  equilibrio1.xki  juntosPrec.xki
src/: Henoc  Makefile
src/FullHenoc/: CfrmHenoc.cpp  CfrmHenoc.h  CfrmMundo.cpp  CfrmMundo.h  CfrmPeCaLi.cpp  CfrmPeCaLi.h  HBall.cpp  HBox.h  HObject.cpp  HObject.h  Henoc.pro  diagramscene.cpp  diagramscene.h  diagramscene.qrc  frmMundo.ui  frmPeCaLi.ui  glviewport.cpp  glviewport.h  henocUniverseI.cpp  henocUniverseI.h  main.cpp  ode_bridge.cpp  ode_bridge.h  openglrenderer.cpp  qrc_diagramscene.cpp
src/HenocCameraDrv/HenocMouseDriver/: HenocMouseDriver.c  fourcc.h
src/HenocCameraDrv/HenocMouseDriver/opencv/: Makefile  Makefile.in  cvutils.h
src/HenocCameraDrv/uvccapture-0.4/: uvccapture
src/HenocUniverse/: HenocUniverse.pro  Makefile  aabb.h  henocUniverse.h  intersection.h  shapes.h  vector.h
src/HenocUniverse/source/: henocUniverse.cpp  intersection.cpp  quad-circle.cpp  shapes.cpp  vector.cpp
